fix portfolio spillover on right side

--- a/salesaid/verioplatform_portfolio/res/css/4.0.css
+++ b/salesaid/verioplatform_portfolio/res/css/4.0.css
@@ -93,5 +93,5 @@ body{
 }
 #delica .co{
 	width:220px; 
-	margin:-220px 0 0 -95px;
+	margin: -220px 0 0 -115px;
 }
